--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -12,7 +12,7 @@ jobs:
     strategy:
       matrix:
         os: [ubuntu-latest, windows-latest, macos-latest]
-        python-version: ['3.9', '3.10', '3.11']
+        python-version: ['3.11']
 
     steps:
     - name: Checkout code
@@ -27,6 +27,9 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install pyinstaller
+        if [ "$RUNNER_OS" == "Windows" ]; then
+          pip install windows-curses
+        fi
 
     - name: Build binaries
       run: |
@@ -35,7 +38,7 @@ jobs:
     - name: Upload build artifacts
       uses: actions/upload-artifact@v3
       with:
-        name: termemoji-${{ matrix.os }}-${{ matrix.python-version }}
+        name: termemoji-${{ matrix.os }}
         path: |
           termemoji-*.zip
           dist/
@@ -63,13 +66,13 @@ jobs:
         draft: false
         prerelease: false
 
-    - name: Upload Release Assets
+    - name: Upload Linux Assets
       uses: actions/upload-release-asset@v1
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
         upload_url: ${{ steps.create_release.outputs.upload_url }}
-        asset_path: ./termemoji-ubuntu-latest-3.11/termemoji-ubuntu-latest-3.11.zip
+        asset_path: ./termemoji-ubuntu-latest/termemoji-ubuntu-latest.zip
         asset_name: termemoji-linux-x64.zip
         asset_content_type: application/zip
 
@@ -79,7 +82,7 @@ jobs:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
         upload_url: ${{ steps.create_release.outputs.upload_url }}
-        asset_path: ./termemoji-windows-latest-3.11/termemoji-windows-latest-3.11.zip
+        asset_path: ./termemoji-windows-latest/termemoji-windows-latest.zip
         asset_name: termemoji-windows-x64.zip
         asset_content_type: application/zip
 
@@ -89,6 +92,6 @@ jobs:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
         upload_url: ${{ steps.create_release.outputs.upload_url }}
-        asset_path: ./termemoji-macos-latest-3.11/termemoji-macos-latest-3.11.zip
+        asset_path: ./termemoji-macos-latest/termemoji-macos-latest.zip
         asset_name: termemoji-macos-x64.zip
         asset_content_type: application/zip
