--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,3 +1,60 @@
+name: Build and Release
+
+on:
+  push:
+    tags:
+      - 'v*'
+  workflow_dispatch:
+
+jobs:
+  build:
+    runs-on: ${{ matrix.os }}
+    permissions:
+      contents: read
+      packages: write
+      id-token: write
+      attestations: write
+    strategy:
+      matrix:
+        os: [ubuntu-latest, windows-latest, macos-latest]
+        python-version: ['3.11']
+
+    steps:
+    - name: Checkout code
+      uses: actions/checkout@v4
+
+    - name: Set up Python ${{ matrix.python-version }}
+      uses: actions/setup-python@v4
+      with:
+        python-version: ${{ matrix.python-version }}
+
+    - name: Install dependencies (Linux/macOS)
+      if: runner.os != 'Windows'
+      run: |
+        python -m pip install --upgrade pip
+        pip install pyinstaller
+
+    - name: Install dependencies (Windows)
+      if: runner.os == 'Windows'
+      run: |
+        python -m pip install --upgrade pip
+        pip install pyinstaller
+        pip install windows-curses
+
+    - name: Build binaries
+      run: |
+        python build.py
+
+    - name: Package build
+      run: |
+        zip -r termemoji-${{ matrix.os }}.zip dist/
+
+    - name: Upload build artifacts
+      uses: actions/upload-artifact@v4
+      with:
+        name: termemoji-${{ matrix.os }}
+        path: termemoji-${{ matrix.os }}.zip
+
   release:
     needs: build
     runs-on: ubuntu-latest
@@ -16,7 +73,6 @@
       uses: actions/download-artifact@v4
 
     - name: Create Release
-      id: create_release
       run: |
         gh release create ${{ github.ref_name }} \
           --title "Release ${{ github.ref_name }}" \
